# c2_dog_tool-back

./: .clang-format  .gitignore  CMakeLists.txt  README.md  all_flash.jlink  build.sh  demo.py  test_config.ini  toolchain.cmake
include/: BoardBasicTester.h  IUpdater.h  JointControl.h  JointUpdater.h  McuUpdater.h  ProdTestProtocol.h  ProdTestServer.h  Protocol.h  StatusReporter.h  TestConfig.h  TestLogger.h  UdpClient.h  device_creator.hpp  mcu_soc_com_protocol.h  ws2812_control.hpp
src/: BoardBasicTester.cpp  JointControl.cpp  JointUpdater.cpp  McuUpdater.cpp  ProdTestServer.cpp  TestConfig.cpp  TestLogger.cpp  UdpClient.cpp  broad_test_cli.cpp  cs_com_protocol.cpp  device_creator.cpp  main.cpp  ws2812_control.cpp
